syntax="proto3";

package userspb;
option go_package = "./userspb";

import "google/api/annotations.proto";

message EmptyData {}

message PingMessage {
  string greeting = 1;
}

message User {
  int64 id=1;
  string username=2;
  int64 created=3;
}

message CreateUserRequest {
	string username=1;
	string password=2;
}

message CreateUserResponse {
  User user=1;
}

message GetUsersResponse {
	repeated User users=1;
}

message GetUserRequest {
	string username=1;
}

message GetUserByIDRequest {
	int64 id=1;
}

message GetUserResponse {
  User user=1;
}

message AuthenticateRequest {
	string username=1;
	string password=2;
}

message AuthenticateResponse {
	bool Auth=1;
  User user=2;
}

service UsersService {
  rpc SayHello(PingMessage) returns (PingMessage) {
    option (google.api.http) = {
      post: "/users/ping"
      body: "*"
    };
  }
	rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
     option (google.api.http) = {
       post: "/users"
       body: "*"
     };
  };
	rpc GetUsers(EmptyData) returns (GetUsersResponse) {
     option (google.api.http) = {
       get: "/users"
     };
  };
	rpc GetUser(GetUserRequest) returns (GetUserResponse) {
     option (google.api.http) = {
       get: "/users/{username=*}"
     };
  };
	rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) {
     option (google.api.http) = {
       post: "/users/auth"
       body: "*"
     };
  };
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserResponse) {
     option (google.api.http) = {
       post: "/users/{id=*}"
       body: "*"
     };
  }
}
